[tool.poetry]
name = "xdg-open-wsl"
version = "0.1.0"
description = ""
authors = ["Charl P. Botha (X1E) <cpbotha@vxlabs.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.poetry.scripts]
xdg-open = 'xdg_open_wsl:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
