[tool.poetry]
name = "xdg-open-wsl"
version = "1.0.0"
description = "xdg-open replacement for WSL that opens files and links using Windows apps."
authors = ["Charl P. Botha (X1E) <cpbotha@vxlabs.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/cpbotha/xdg-open-wsl"
repository = "https://github.com/cpbotha/xdg-open-wsl"
keywords = ["xdg-open", "windows", "linux", "wsl"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Desktop Environment",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
click = ">=7.1.1"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
flake8 = ">=3.7.9"
black = ">=19.10b0"

[tool.poetry.scripts]
xdg-open = 'xdg_open_wsl:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core;masonry.api"

[tool.black]
# change black's default from 88 characters to 120 characters
line-length = 120
